fix z-index на авторизации

--- a/src/less/login.less
+++ b/src/less/login.less
@@ -1,5 +1,5 @@
 .login {
-    position: absolute;
+    position: fixed;
     background-color: white;
     width: 500px;
     height: 500px;
@@ -9,4 +9,5 @@
     bottom: 0;
     margin: auto;
     border: 1px solid black;
+    z-index: 10;
 }
